[project]
name = "claude-history-viewer"
version = "1.0.0"
description = "Web-based viewer for Claude Code (CLI) conversation history"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "yangzealliator-yz" }
]
keywords = ["claude", "cli", "history", "viewer", "ai", "conversation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "flask>=2.0.0",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/yangzealliator-yz/claude-history-viewer"
Repository = "https://github.com/yangzealliator-yz/claude-history-viewer"
Issues = "https://github.com/yangzealliator-yz/claude-history-viewer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["app.py", "analytics_core.py", "build.py", "gen_sig.py"]

[dependency-groups]
dev = []
